another partial commit

--- a/chords.html
+++ b/chords.html
@@ -2,11 +2,17 @@
 
 <head>
     <title>Аккорды</title>
-    <link rel="stylesheet" href="/css/hueta.css">
+    <link rel="stylesheet" href="/chords/">
 </head>
 
 <body>
-    <button class="gradient-button" onClick="window.location = 'index.html'">На главную</button>
+    <button class="gradient-button" onClick="window.location = 'index.html'">На главную</button><br>
+    <h3><a href = /chords/koster.html>Костёр целинный</a></h3>
+    <h3><a href = /chords/orfei.html>Орфей и Эвридика</a></h3>
+    <h3><a href = /chords/pismo.html>Письмо из Казани</a></h3>
+    <!---
+        <h3><a href = /chords/> </a></h3>
+    --->
 </body>
 
 </html>
