--- a/chords.html
+++ b/chords.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Аккорды</title>
-    <link rel="stylesheet" href="/chords/">
+    <link rel="stylesheet" href="/chords/hueta.css">
 </head>
 
 <body>
