--- a/chords/koster.html
+++ b/chords/koster.html
@@ -1,7 +1,7 @@
 <html>
     
     <head>
-        <title>Чем я вообще занимаюсь</title>
+        <title>Костёр целинный</title>
     </head>
     
     <body>
