--- a/chords/orfei.html
+++ b/chords/orfei.html
@@ -1,15 +1,16 @@
 <html>
 
 <head>
-    <title>Письмо из Казани</title>
+    <title>Орфей и Эвридика</title>
 </head>
 
 <body>
     <h1 align="center"><a href = "../chords.html">Вернуться</a></h1>
     <h1>Орфей и Эвридика</h1>
-    Табы(из беседы): <br><img src ="img/orfei_tabs.jpg"><br>
+    Табы(из беседы): <br><img src ="../img/orfei.png" width = 800 height = 500><br>
     Если вы, вдруг, не умеете читать табы, то просто перебор-шестёрка, то есть бас(*)-3-2-1-2-3. Играете все струны открытые, кроме 5 струна 3 лад.<br>
-    <i><b>(*) Бас меняете - сначала 6 струна, потом тот же перебор с 4 струны, потом два раза с 5 струны. Т.о. бас 6->4->5->5</b></i>
+    <i><b>(*) Бас меняете - сначала 6 струна, потом тот же перебор с 4 струны, потом два раза с 5 струны</i>. Т.о. бас 6->4->5->5</b> (Я не умею объяснять)<br>
+    После перебора в куплете есть небольшой проигрыш. В принципе на фото есть аккорды и бой. Аккорд C с подписью 3 лад это буквально C, но смещённый с первого лада на третий. В середине припева после слов "Каждый шаг..." нужно, не переходя на Em, снова играть C->C(3) и так далее. В конце припева("За тобой идёт... Она" на C(3) нужно продолжать до "она". Надеюсь, понятно объяснено<div class=""></div>
 </body>
 
 </html>
