--- a/chords/koster.html
+++ b/chords/koster.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-        <h1 align="center"><a href = "../chords.html">Вернуться</a></h1>
+        <center><button class="gradient-button"onClick="window.location = 'index.html'">На главную</button><br></center>
         <h1>Костёр целинный</h1>
         Всё просто:<br>
         Бой -- восьмёрка<br>   
