--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <head>
         <meta name="yandex-verification" content="3ab5e8a6f09b5cad" />
         <title>Сайт Егора Крапивина</title>
-        <link rel="shortcut icon" href="icon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
         <link rel="stylesheet" href="/css/hueta.css">
       <script src="main.js"></script>
     </head>
     <body id="main" style='background-color:#eb0c0c'>
         <h1 align='center'>Добро пожаловать</h1>
         <h3 align='center'>Ебать, сайт!</h3>
-        <a class='gradient-button' style="margin-left:0px" href='roma.html'>Рома</a><br />
+        <a class='gradient-button' style="margin-left:0px" href='roma.html'>Рома</a>
+        <button class = "gradient-button" onclick="window.location = 'chords.html'">Аккорды</button><br />
         <center><button class='gradient-button' onClick="window.location = 'tree.html';">Тебе 25 и у тебя есть компьютер<br>Ты обязан поиграть в эту игру</a></center>
         <a class='zalupa' href="aha.jpg">Лол нажми</a> <button class="gradient-button" style="padding: 10px 20px" onclick="window.location='base.html'">База</button>
         <script>
