--- a/chords/koster.html
+++ b/chords/koster.html
@@ -2,6 +2,7 @@
     
     <head>
         <title>Костёр целинный</title>
+        <link rel="stylesheet" href="/css/hueta.css">
     </head>
     
     <body>
