--- a/chords.html
+++ b/chords.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <center><button class="gradient-button"onClick="window.location = '../index.html'">На главную</button><br></center>
+    <center><button class="gradient-button"onClick="window.location = '/chords.html'">На главную</button><br></center>
     <h3><a href = /chords/koster.html>Костёр целинный</a></h3>
     <h3><a href = /chords/orfei.html>Орфей и Эвридика</a></h3>
     <h3><a href = /chords/pismo.html>Письмо из Казани</a></h3>
