--- a/chords/koster.html
+++ b/chords/koster.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-        <center><button class="gradient-button"onClick="window.location = '../index.html'">На главную</button><br></center>
+        <center><button class="gradient-button"onClick="window.location = '/chords.html'">На главную</button><br></center>
         <h1>Костёр целинный</h1>
         Всё просто:<br>
         Бой -- восьмёрка<br>   
