--- a/chords/orfei.html
+++ b/chords/orfei.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <center><button class="gradient-button"onClick="window.location = '../index.html'">На главную</button><br></center>
+    <center><button class="gradient-button"onClick="window.location = '/chords.html'">На главную</button><br></center>
     <h1>Орфей и Эвридика</h1>
     Табы(из беседы): <br><img src ="../img/orfei.png" width = 800 height = 500><br>
     Если вы, вдруг, не умеете читать табы, то просто перебор-шестёрка, то есть бас(*)-3-2-1-2-3. Играете все струны открытые, кроме 5 струна 3 лад.<br>
