--- a/chords/pismo.html
+++ b/chords/pismo.html
@@ -2,10 +2,11 @@
 
 <head>
     <title>Письмо из Казани</title>
+    <link rel="stylesheet" href="../css/hueta.css">
 </head>
 
 <body>
-    <h1 align="center"><a href = "../chords.html">Вернуться</a></h1>
+    <center><button class="gradient-button"onClick="window.location = '/chords.html'">На главную</button><br></center>
     <h1>Письмо из Казани</h1>
     Перебор восьмёрка, как в Алёнке. <b>Напоминание: </b> бас-3-2-3-1-3-2-3<br>
     <br>Аккорды в куплете <b>Am Dm</b> - две восмьёрки(в смысле перебора), <b>G C Dm E</b> - по одной восьмёрке. В конце куплета E играется ещё раз.<br>
