--- a/chords/pismo.html
+++ b/chords/pismo.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <center><button class="gradient-button"onClick="window.location = '/chords.html'">На главную</button><br></center>
+    <center><button class="gradient-button"onClick="window.location = '/index.html'">На главную</button><br></center>
     <h1>Письмо из Казани</h1>
     Перебор восьмёрка, как в Алёнке. <b>Напоминание: </b> бас-3-2-3-1-3-2-3<br>
     <br>Аккорды в куплете <b>Am Dm</b> - две восмьёрки(в смысле перебора), <b>G C Dm E</b> - по одной восьмёрке. В конце куплета E играется ещё раз.<br>
