--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </head>
     <body id="main" style='background-color:#eb0c0c'>
         <h1 align='center'>Добро пожаловать</h1>
-        <h3 align='center'>Ебать, сайт!</h3>
+        <!--<h3 align='center'>Ебать, сайт!</h3>-->
+		<p align="center"><img src="img/cooltext.gif" align="center"></p>
         <a class='gradient-button' style="margin-left:0px" href='roma.html'>Рома</a>
         <button class = "gradient-button" onclick="window.location = 'chords.html'">Аккорды</button><br />
         <center><button class='gradient-button' onClick="window.location = 'tree.html';">Тебе 25 и у тебя есть компьютер<br>Ты обязан поиграть в эту игру</a></center>
